--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -82,6 +82,10 @@ nav a {
     margin-bottom: 20px;
 }
 /* main section styles */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 /* about section styles */
 .about {
@@ -89,4 +93,20 @@ nav a {
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0;
+}
+.about-info-container {
+    display: flex;
+    justify-content: space-between;
+}
+.about-info {
+    text-align: center;
+}
+.info-title {
+    color: #757575;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+}
+#what-i-do-description {
+    padding: 30px 150px;
 }
