--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -176,9 +176,11 @@ footer {
     margin-bottom: 24px;
     padding: 18px 35px;
     font-size: 16px;
+    font-weight: 400;
     color: #757575;
     border-radius: 5px;
     background: #FFF;  
     border: 0;
     width: 100%;
+    font-family: Open Sans;
 }
